Remove speakers from 2016 and adapt text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="assets/img/favicon.ico">
 
-    <title>JDISConf 2016</title>
+    <title>JDISConf 2017</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -21,7 +21,7 @@
     <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
 
     <script type="text/javascript">
-      var host = "conference2016.jdis.ca";
+      var host = "conference2017.jdis.ca";
       if ((host == window.location.host) && (window.location.protocol != "https:"))
           window.location.protocol = "https";
     </script>
@@ -43,14 +43,14 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2 centered">
             <img style="max-width:275px" src="/assets/img/logo.svg"/>
-            <h2>22 octobre 2016</h2>
+            <h2>28 octobre 2017</h2>
             <h3>Université de Sherbrooke</h3>
             <h4>Local D2-1060 de la Faculté des sciences</h4>
             <div class="mtb">
               <!--
                 <a href="https://www.eventbrite.ca/e/jdisconf-2016-tickets-27858271841" class='btn btn-conf btn-green'>Obtenir un billet</a>
               -->
-              <div class='btn btn-conf btn-green disabled'>Événement passé</div>
+              <div class='btn btn-conf btn-green disabled'>Événement à venir</div>
               <a style="color:white;" href="#g"><div style="margin-top:15px; font-size:26px;">&#8964;</div></a>
             </div><!--/mt-->
           </div>
@@ -60,20 +60,8 @@
 
     <div id="g">
       <div class="container">
-        <h3 style="margin-top:0; margin-bottom:30px; text-align:center;">JDISConf 2016 est fièrement commanditée par</h3>
-        <div style="margin-bottom:8px" class="row sponsor centered">
-          <div class="col-sm-12">
-            <a href="http://www.genetec.com/fr" target="_blank">
-              <img style="max-width:250px;" src="assets/img/sponsor1.png" alt="">
-            </a>
-          </div>
-        </div>
+        <h3 style="margin-top:0; margin-bottom:30px; text-align:center;">JDISConf 2017 est fièrement commanditée par</h3>
         <div class="row sponsor centered">
-          <div class="vcenter col-md-2">
-            <a href="http://www.coveo.com/fr" target="_blank">
-              <img src="assets/img/sponsor2.png" alt="">
-            </a>
-          </div>
           <div class="vcenter col-md-2">
             <a href="https://ageg.ca/" target="_blank">
               <img src="assets/img/sponsor6.png" alt="">
@@ -116,8 +104,8 @@
         <div class="row centered">
           <div class="col-md-8 col-md-offset-2">
             <h1 style="margin-top:0;">Boissons et repas offerts gratuitement.</h1>
-            <h4>Pour la cinquième année consécutive, on vous gâte! JDISConf 2016 succède fièrement à la Conférence JDIS 2015 et à trois APIUS. C'est toujours une excellente opportunité de participer à la scène technologique sherbrookoise dans une ambiance décontractée et invitante qui a fait le succès des APIUS. On vous attend en grand nombre!</h4>
-            <a style="margin-bottom:70px;" href="https://www.eventbrite.ca/e/jdisconf-2016-tickets-27858271841" class="disabled btn btn-conf-2 btn-green">Événement passé</a>
+            <h4>Pour la sixième année consécutive, on vous gâte! JDISConf 2017 succède fièrement à déjà deux Conférences JDIS et trois APIUS. C'est toujours une excellente opportunité de participer à la scène technologique sherbrookoise dans une ambiance décontractée et invitante qui a fait le succès des APIUS. On vous attend en grand nombre!</h4>
+            <a style="margin-bottom:70px;" href="https://www.eventbrite.ca/e/jdisconf-2016-tickets-27858271841" class="disabled btn btn-conf-2 btn-green">Événement à venir</a>
           </div><!--/col-md-8-->
         </div>
       </div>
@@ -125,92 +113,92 @@
 
     <div class="container ptb">
       <h1 class="centered mb" style="margin-top:0;">Les conférenciers</h1>
-      <div id="fbrosseau" class="row">
+      <div id="speaker1" class="row">
         <div class="centered col-md-4">
-          <img src="/assets/img/speakers/fbrosseau.jpg" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
-          <h3>Francis Brosseau</h3>
-          <h4 style="margin-top:0;">Développeur chez <a href="https://www.genetec.com/fr" target="_blank">Genetec</a></h4>
+          <img src="/assets/img/speakers/placeholder.png" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
+          <h3>À venir</h3>
+          <h4 style="margin-top:0;">À venir</h4>
         </div>
         <div class="col-md-8">
-          <h2>Le <em>multi-threading</em> de tous les jours</h2>
+          <h2>Sujet à venir</h2>
           <p>
-            Lancer les choses sur un thread en arrière-plan pour ne pas geler son UI, c'est facile. Une petite recherche sur internet et le tour est joué. Faire en sorte que tout va continuer de fonctionner quand ça va être en production dans des systèmes plus gros que ce qui n'a jamais été testé, c'est une autre affaire!
+            <em>Description à venir.</em>
           </p>
           <hr>
           <p>
-            Diplômé en génie informatique à Sherbrooke et développeur chez Genetec depuis bientôt 3 ans, Francis est passionné des projets informatiques de très grande envergure, non seulement pour participer à les faire fonctionner, mais aussi pour savoir comment et pourquoi ça fonctionne.
+            <em>Biographie à venir.</em>
           </p>
         </div>
       </div><!--/row-->
       <hr style="padding:10px 0;">
-      <div id="bligneris" class="row">
+      <div id="speaker2" class="row">
         <div class="centered col-md-4">
-          <img src="/assets/img/speakers/bligneris.jpg" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
-          <h3 style="">Benoit des Ligneris</h3>
-          <h4 style="margin-top:0;"><em>‎Chief Growth Officer</em> chez <a href="https://subscribility.com/us/" target="_blank">Subscribility</a></h4>
+          <img src="/assets/img/speakers/placeholder.png" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
+          <h3 style="">À venir</h3>
+          <h4 style="margin-top:0;">À venir</h4>
         </div>
         <div class="col-md-8">
-          <h2>Entrepreneuriat</h2>
+          <h2>Sujet à venir</h2>
+            <p>
+              <em>Description à venir.</em>
+            </p>
+            <hr>
             <p>
               <em>Biographie à venir.</em>
             </p>
-            <hr>
-            <p>
-              Benoit des Ligneris détient un doctorat en physique de l'Université de Sherbrooke.
-            </p>
         </div>
       </div><!--/row-->
       <hr style="padding:10px 0;">
-      <div id="fprovencher" class="row">
+      <div id="speaker3" class="row">
         <div class="centered col-md-4">
-          <img src="/assets/img/speakers/fprovencher.jpg" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
-          <h3 style="">Françoise Provencher</h3>
-          <h4 style="margin-top:0;"><em>Data Team Lead</em> chez <a href="https://fr.shopify.ca/" target="_blank">Shopify</a></h4>
+          <img src="/assets/img/speakers/placeholder.png" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
+          <h3 style="">À venir</h3>
+          <h4 style="margin-top:0;">À venir</h4>
         </div>
         <div class="col-md-8">
-          <h2>Analyse de données à grande échelle</h2>
+          <h2>Sujet à venir</h2>
             <p>
-              Que faire lorsque les données qu'on veut analyser le tiennent pas en mémoire sur un seul ordinateur? On utilise plusieurs ordinateurs, bien sûr! Nous allons discuter comment le parallélisme est essentiel dans le champ des mégadonnées ("Big Data"), tant pour distribuer le stockage de données que répartir les calculs.
+              <em>Description à venir.</em>
             </p>
             <hr>
             <p>
-              Françoise Provencher détient un doctorat en physique de l'Université de Montréal. Elle a effectué un post-doctorat industriel en apprentissage automatique (<em>machine learning</em>) à l'École de Technologie Supérieure et dirige maintenant une équipe d'analystes chez Shopify.
+              <em>Biographie à venir.</em>
             </p>
         </div>
       </div><!--/row-->
       <hr style="padding:10px 0;">
-      <div id="vseguin" class="row">
+      <div id="speaker4" class="row">
         <div class="centered col-md-4">
-          <img src="/assets/img/speakers/vseguin.jpg" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
-          <h3>Vincent Séguin</h3>
-          <h4 style="margin-top:0;">Chef d'équipe <em>Cloud</em> chez <a href="http://www.coveo.com/fr" target="_blank">Coveo</a></h4>
+          <img src="/assets/img/speakers/placeholder.png" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
+          <h3>À venir</h3>
+          <h4 style="margin-top:0;">À venir></h4>
         </div>
         <div class="col-md-8">
-          <h2><em>Cloud</em> et <em>High Availability</em></h2>
+          <h2>Sujet à venir</h2>
           <p>
-            «Everything can fail all the time» est une citation célèbre du CTO d'Amazon... qui s'avère on ne peut plus vraie! Votre nouvelle application Cloud se doit d'offrir 99.9% d'uptime? Pas de problème. Découvrez l'art et les pièges reliés au développement d'une application Cloud <em>highly available</em>.
+            <em>Description à venir.</em>
           </p>
           <hr>
           <p>
-            Vincent Séguin est chef d'équipe de la plate-forme <em>Cloud</em> chez Coveo. Il dirige une équipe de passionnés tout en l'étant lui-même. Ayant fait un baccalauréat en génie logiciel à l'Université Laval, il y enseigne maintenant également le développement d'applications web.
+            <em>Biographie à venir.</em>
           </p>
         </div>
       </div><!--/row-->
       <hr style="padding:10px 0;">
-      <div id="dsenechal" class="row">
+      <div id="speaker5" class="row">
         <div class="centered col-md-4">
-          <img src="/assets/img/speakers/dsenechal.jpg" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
-          <h3>David Sénéchal</h3>
-          <h4 style="margin-top:0;">Directeur du département de physique de l'<a href="http://www.usherbrooke.ca/physique/" target="_blank">Université de Sherbrooke</a></h4>
+          <img src="/assets/img/speakers/placeholder.png" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
+          <h3>À venir</h3>
+          <h4 style="margin-top:0;">À venir</h4>
         </div>
         <div class="col-md-8">
-          <h2>Parallélisme et calcul scientifique</h2>
+          <h2>Sujet à venir</h2>
           <p>
-            David Sénéchal est le directeur du département de physique de l'Université de Sherbrooke. Il détient un doctorat en physique de l'Université Cornell.
+            <em>Description à venir.</em>
           </p>
           <hr>
           <p>
-            Il a été le chercheur responsable du calcul scientifique à l'UdeS de 2001 à 2011, directeur du Réseau québécois de calcul de haute performance de 2006 à 2011, membre du comité de direction de Calcul Canada de 2006 à 2011 et membre du conseil d'administration de Calcul Canada de 2012 à 2016. Son programme de recherche porte sur les interactions entre électrons dans les matériaux, en particulier sur les applications de certaines méthodes numériques dans ce contexte.
+            <em>Biographie à venir.</em>
           </p>
         </div>
       </div><!--/row-->
@@ -218,7 +206,7 @@
     <div class="green">
       <div class="container">
         <div class="row centered">
-          <h1 class="mb" style="margin-top:0;">Horaire du 22 octobre 2016</h1>
+          <h1 class="mb" style="margin-top:0;">Horaire du 28 octobre 2017</h1>
 
           <table style="width:100%; border:1px solid #61c195;" border=1>
             <tbody>
@@ -255,8 +243,8 @@
                 <td>
                   <p>10h05</p>
                 </td>
-                <td><p>Le <em>multi-threading</em> de tous les jours</p></td>
-                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#fbrosseau">Francis Brosseau, Genetec</a></p></td>
+                <td><p>À venir</p></td>
+                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#speaker1">À venir</a></p></td>
               </tr>
               <tr>
                 <td>
@@ -269,8 +257,8 @@
                 <td>
                   <p>11h10</p>
                 </td>
-                <td><p>Parallélisme et calcul scientifique</p></td>
-                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#dsenechal">David Sénéchal, Université de Sherbrooke</a></p></td>
+                <td><p>À venir</p></td>
+                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#speaker2">À venir</a></p></td>
               </tr>
               <tr>
                 <td>
@@ -285,8 +273,8 @@
                 <td>
                   <p>13h15</p>
                 </td>
-                <td><p>Analyse de données à grande échelle</td>
-                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#fprovencher">Françoise Provencher, Shopify</a></p></td>
+                <td><p>À venir</td>
+                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#speaker3">À venir</a></p></td>
               </tr>
               <tr>
                 <td>
@@ -299,8 +287,8 @@
                 <td>
                   <p>14h30</p>
                 </td>
-                <td><p><em>Cloud</em> et <em>High Availability</em></td>
-                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#vseguin">Vincent Séguin, Coveo</a></p></td>
+                <td><p>À venir</td>
+                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#spekaer4">À venir</a></p></td>
               </tr>
               <tr>
                 <td>
@@ -313,12 +301,8 @@
                 <td>
                   <p>16h10</p>
                 </td>
-                <td><p>Entrepreneuriat</a></td>
-                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#bligneris">Benoit des Ligneris, Subscribility</a></p></td>
-                <!--
-                <td><p>Entrepreneuriat</td>
-                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#ecrevier">Étienne Crevier, BiogeniQ</a></td>
-                -->
+                <td><p>À venir</a></td>
+                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#speaker5">À venir</a></p></td>
               </tr>
               <tr>
                 <td>
@@ -354,7 +338,7 @@
           <h4>Vous avez des questions?</h4>
           <h4><a href="mailto:info@jdis.ca">info@jdis.ca</a></h4>
           <a href="https://www.facebook.com/events/1779207948993493/"><i class="ion-social-facebook"></i></a>
-          <h5 class="mt">&copy; JDIS 2016</h5>
+          <h5 class="mt">&copy; JDIS 2017</h5>
         </div><!--/row-->
       </div><!--/container-->
     </div><!--/F-->
