--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <a href="https://www.facebook.com/events/1779207948993493/"><i class="ion-social-facebook"></i></a>
       </div>
       <div class="container">
-        <div class="row">
+        <div class="row" style="margin-top:75px">
           <div class="col-md-8 col-md-offset-2 centered">
-            <img style="max-width:275px" src="/assets/img/logo.svg"/>
+            <img style="max-width:400px" src="/assets/img/logo.svg"/>
             <h2>28 octobre 2017</h2>
             <h3>Université de Sherbrooke</h3>
             <h4>Local D2-1060 de la Faculté des sciences</h4>
@@ -61,6 +61,13 @@
     <div id="g">
       <div class="container">
         <h3 style="margin-top:0; margin-bottom:30px; text-align:center;">JDISConf 2017 est fièrement commanditée par</h3>
+        <div class="row sponsor centered">
+          <div class="col-sm-12">
+            <a href="https://www.mirego.com/" target="_blank">
+              <img style="max-width:250px" src="assets/img/sponsor1.png" alt="">
+            </a>
+          </div>
+        </div>
         <div class="row sponsor centered">
           <div class="vcenter col-md-2">
             <a href="https://ageg.ca/" target="_blank">
@@ -115,9 +122,9 @@
       <h1 class="centered mb" style="margin-top:0;">Les conférenciers</h1>
       <div id="speaker1" class="row">
         <div class="centered col-md-4">
-          <img src="/assets/img/speakers/placeholder.png" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
-          <h3>À venir</h3>
-          <h4 style="margin-top:0;">À venir</h4>
+          <img src="/assets/img/speakers/mgagnon.png" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
+          <h3>Martin Gagnon</h3>
+          <h4 style="margin-top:0;"><em>Cofondateur, Associé et Directeur développement logiciel</em> chez <a href="https://www.mirego.com/">Mirego</a></h4>
         </div>
         <div class="col-md-8">
           <h2>Sujet à venir</h2>
