--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="centered col-md-4">
           <img src="/assets/img/speakers/placeholder.png" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
           <h3>À venir</h3>
-          <h4 style="margin-top:0;">À venir></h4>
+          <h4 style="margin-top:0;">À venir</h4>
         </div>
         <div class="col-md-8">
           <h2>Sujet à venir</h2>
