Add bio for mgagnon

--- a/index.html
+++ b/index.html
@@ -127,13 +127,18 @@
           <h4 style="margin-top:0;"><em>Cofondateur, Associé et Directeur développement logiciel</em> chez <a href="https://www.mirego.com/">Mirego</a></h4>
         </div>
         <div class="col-md-8">
-          <h2>Sujet à venir</h2>
+          <h2>Si je pouvais reculer dans le temps, voici ce que je m'enseignerais</h2>
           <p>
-            <em>Description à venir.</em>
+            <em>Martin est impliqué dans tous les aspects du développement numérique, du mobile au Cloud en passant par le Web. Son expertise des environnements infonuagiques évolutifs et optimisés a permis de placer de nombreuses entreprises à l’avant-garde de l’innovation numérique. Il contribue à la création et l’adaptation de systèmes pouvant supporter une grande quantité de données dans un environnement très sécurisé.</em>
           </p>
-          <hr>
           <p>
-            <em>Biographie à venir.</em>
+            <em>En tant que cofondateur de Mirego (2007 — aujourd’hui), il a dirigé plus de 40 projets de développement web et mobile. Entre autre, pour AmpMe (2015-2016), il a dirigé la recherche et le développement de la capacité de synchronisation et a supervisé le développement des plateformes mobiles.</em>
+          </p>
+          <p>
+            <em>Auparavant, en tant que chef d’équipe chez Copernic (2001-2007), il a participé au développement des métamoteurs de recherche et a dirigé une équipe travaillant sur le logiciel d’indexation de bureau; deux produits utilisés par des millions d’utilisateurs dans le monde.</em>
+          </p>
+          <p>
+            <em>Il encadre également des étudiants en informatique sur les environnements de développement agiles et ceux axés sur les tests.</em>
           </p>
         </div>
       </div><!--/row-->
