Add speaker and fix button

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="col-md-8 col-md-offset-2">
             <h1 style="margin-top:0;">Boissons et repas offerts gratuitement.</h1>
             <h4>Pour la sixième année consécutive, on vous gâte! JDISConf 2017 succède fièrement à déjà deux Conférences JDIS et trois APIUS. C'est toujours une excellente opportunité de participer à la scène technologique sherbrookoise dans une ambiance décontractée et invitante qui a fait le succès des APIUS. On vous attend en grand nombre!</h4>
-            <a style="margin-bottom:70px;" href="https://www.eventbrite.ca/e/jdisconf-2016-tickets-27858271841" class="disabled btn btn-conf-2 btn-green">Événement à venir</a>
+            <a style="margin-bottom:70px;" href="https://www.eventbrite.ca/e/jdisconf-2017-tickets-36739964222" class='btn btn-conf-2 btn-green'>Obtenir un billet</a>
           </div><!--/col-md-8-->
         </div>
       </div>
@@ -145,18 +145,42 @@
       <hr style="padding:10px 0;">
       <div id="speaker2" class="row">
         <div class="centered col-md-4">
-          <img src="/assets/img/speakers/placeholder.png" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
-          <h3 style="">À venir</h3>
-          <h4 style="margin-top:0;">À venir</h4>
+          <img src="/assets/img/speakers/obilodeau.jpg" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
+          <h3 style="">Olivier Bilodeau</h3>
+          <h4 style="margin-top:0;"><em>Responsable de la recherche sur la cybersécurité</em> chez <a href="http://gosecure.net/">GoSecure</a></h4>
         </div>
         <div class="col-md-8">
-          <h2>Sujet à venir</h2>
+          <h2>Les logiciels malveillants sur les objets connectés</h2>
             <p>
-              <em>Description à venir.</em>
+              <p>
+                <em>On peut trouver des logiciels malveillants partout où du code s'exécute. Les systèmes embarqués, plus communément appelés les objets connectés (Internet of Things - IoT), n'en font pas exception. De leur popularité découle une nouvelle vague de virus et de tactiques. À travers cette présentation, nous verrons comment chasser ce genre de menaces.</em>
+              </p>
+              <p>
+                <em>Les sujets couverts seront:</em>
+              </p>
+              <ul style="list-style-type:disc">
+                <li>La difficulté de collecte de logiciels malveillants de type IoT</li>
+                <li>Les pots de miel (honeypots)</li>
+                <li>Pots de miel hybrides (émulation et réelle exécution)</li>
+                <li>Problèmes de rétro-ingénierie et solutions pratiques</li>
+                <li>Étude de 3 cas réels: Linux/Moose, MIPS Dropper et LizardStresser DDoS (Linux/Gafgyt)</li>
+                <li>Source du problème et pistes de solutions</li>
+              </ul>
+              <p>
+                <em>L'auditoire sortira mieux équipé pour affronter cette prochaine génération de logiciels malveillants, et ce en utilisant principalement des outils libres</em>
+              </p>
             </p>
             <hr>
             <p>
-              <em>Biographie à venir.</em>
+              <p>
+                <em>Olivier Bilodeau est à la tête du département de recherche en cybersécurité de GoSecure. Avec plus de 10 ans d’expérience en sécurité informatique, Olivier est passé par la gestion de réseaux et de serveurs Unix, le développement d’un logiciel libre de contrôle d’accès réseau et a travaillé comme chercheur en logiciel malveillant.</em>
+              </p>
+              <p>
+                <em>Communicateur chevronné, il a donné des présentations à plusieurs conférences telles que BlackHat Europe, Defcon, Botconf, SecTor, Derbycon, NorthSec et bien d’autres. Investi dans sa communauté, il coorganise MontréHack — une initiative mensuelle de partage de connaissances techniques en sécurité appliquée —, il est responsable des formations pour NorthSec et est l’hôte de son Hacker Jeopardy.</em>
+              </p>
+              <p>
+                <em>Ses intérêts en recherche sont les outils de rétro-ingénierie, les outils de recherche en logiciels malveillants, les virus sur les systèmes embarqués et les "honeypots". Pour relaxer, il aime travailler dans l'ecosystème libre AsciiDoc et brasser sa propre bière.</em>
+              </p>
             </p>
         </div>
       </div><!--/row-->
@@ -285,8 +309,8 @@
                 <td>
                   <p>13h15</p>
                 </td>
-                <td><p>À venir</td>
-                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#speaker3">À venir</a></p></td>
+                <td><p>Si je pouvais reculer dans le temps, voici ce que je m'enseignerais</td>
+                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#speaker3">Martin Gagnon</a></p></td>
               </tr>
               <tr>
                 <td>
@@ -299,8 +323,8 @@
                 <td>
                   <p>14h30</p>
                 </td>
-                <td><p>À venir</td>
-                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#spekaer4">À venir</a></p></td>
+                <td><p>Les logiciels malveillants sur les objets connectés</td>
+                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#spekaer4">Olivier Bilodeau</a></p></td>
               </tr>
               <tr>
                 <td>
