--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
             </a>
           </div>
           <div class="vcenter col-md-2">
+            <a href="http://www.remdus.qc.ca/" target="_blank">
+              <img src="assets/img/sponsor7.png" alt="">
+            </a>
+          </div>
+          <div class="vcenter col-md-2">
             <a href="https://www.usherbrooke.ca/" target="_blank">
               <img src="assets/img/sponsor5.png" alt="">
             </a>
