--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <div class="container ptb">
       <h1 class="centered mb" style="margin-top:0;">Les conférenciers</h1>
-      <div id="speaker1" class="row">
+      <div id="speaker3" class="row">
         <div class="centered col-md-4">
           <img src="/assets/img/speakers/mgagnon.png" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
           <h3>Martin Gagnon</h3>
@@ -148,7 +148,7 @@
         </div>
       </div><!--/row-->
       <hr style="padding:10px 0;">
-      <div id="speaker2" class="row">
+      <div id="speaker4" class="row">
         <div class="centered col-md-4">
           <img src="/assets/img/speakers/obilodeau.jpg" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
           <h3 style="">Olivier Bilodeau</h3>
@@ -190,20 +190,22 @@
         </div>
       </div><!--/row-->
       <hr style="padding:10px 0;">
-      <div id="speaker3" class="row">
+      <div id="speaker2" class="row">
         <div class="centered col-md-4">
-          <img src="/assets/img/speakers/placeholder.png" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
-          <h3 style="">À venir</h3>
-          <h4 style="margin-top:0;">À venir</h4>
+          <img src="/assets/img/speakers/alexandre.jpg" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
+          <h3 style="">Alexandre Jean Claude</h3>
+          <h4 style="margin-top:0;"><em>Directeur Technique & Co-Fondateur</em> chez <a href="https://www.metareal.com/">Technologies Metareal inc.</a></h4>
         </div>
         <div class="col-md-8">
-          <h2>Sujet à venir</h2>
+          <h2>Défis et opportunités de la Capture de la Réalité pour la Réalité Virtuelle</h2>
             <p>
-              <em>Description à venir.</em>
+              <em>La Réalité Virtuelle est un nouveau média permettant une immersion presque totale dans un monde virtuel. De nombreuses compagnies tels que Facebook, Valve, Google, Microsoft et Sony y ont investi des sommes considérables pour construire du matériel ainsi des plateformes de contenu. Cependant, la création de contenu pour cette plateforme reste problématique. La méthode traditionnelle consistant à modéliser manuellement les environnements en 3D est coûteuse et requiert du temps et de la main d'oeuvre. La Capture de la Réalité est une série de techniques permettant d'automatiser la modélisation d'environnements existants. Elle est notamment utilisée en ingénierie du bâtiment et en arpentage. C'est une alternative ayant le potentiel d'être accessible à un plus grand public.
+
+Dans cette présentation, nous allons brièvement parler du potentiel commercial de la Réalité Virtuelle comme média. Nous allons ensuite couvrir les différentes techniques de Capture de la Réalité, en comparant les avantages et inconvénients de chacune d'elles. Finalement, nous montrerons quelques exemples d'utilisation de la Capture de la Réalité dans la production d'applications en Réalité Virtuelle.</em>
             </p>
             <hr>
             <p>
-              <em>Biographie à venir.</em>
+              <em>Alexandre est le co-fondateur de Metareal, une compagnie développant des solutions accessibles aux photographes et aux agences de contenu permettant de créer des expériences 3D pour le Web, les plateformes Mobiles et en Réalité Virtuelle. Dans une vie antérieure, Alexandre a travaillé dans le développement de logiciels d'animation 3D chez Softimage, Microsoft, Avid et Autodesk.</em>
             </p>
         </div>
       </div><!--/row-->
@@ -298,8 +300,8 @@
                 <td>
                   <p>11h10</p>
                 </td>
-                <td><p>À venir</p></td>
-                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#speaker2">À venir</a></p></td>
+                <td><p>Défis et opportunités de la Capture de la Réalité pour la Réalité Virtuelle</p></td>
+                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#speaker2">Alexandre Jean Claude</a></p></td>
               </tr>
               <tr>
                 <td>
@@ -329,7 +331,7 @@
                   <p>14h30</p>
                 </td>
                 <td><p>Les logiciels malveillants sur les objets connectés</td>
-                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#spekaer4">Olivier Bilodeau</a></p></td>
+                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#speaker4">Olivier Bilodeau</a></p></td>
               </tr>
               <tr>
                 <td>
