--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
     <title>JDISConf 2017</title>
 
+    <!-- Open Graph data -->
+    <meta property="og:title" content="JDISConf 2017" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://conference2017.jdis.ca/" />
+    <meta property="og:image" content="https://conference2017.jdis.ca/assets/img/preview.png" />
+
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
 
@@ -40,7 +46,7 @@
         <a href="https://www.facebook.com/events/160761851159528/"><i class="ion-social-facebook"></i></a>
       </div>
       <div class="container">
-        <div class="row" style="margin-top:75px">
+        <div class="row" style="margin-top:40px">
           <div class="col-md-8 col-md-offset-2 centered">
             <img style="max-width:400px" src="/assets/img/logo.svg"/>
             <h2>28 octobre 2017</h2>
@@ -64,7 +70,14 @@
         <div class="row sponsor centered">
           <div class="col-sm-12">
             <a href="https://www.mirego.com/" target="_blank">
-              <img style="max-width:250px" src="assets/img/sponsor1.png" alt="">
+              <img style="max-width:375px; max-height:250px" src="assets/img/sponsor1.png" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="row sponsor centered">
+          <div class="col-sm-12">
+            <a href="http://gosecure.net/" target="_blank">
+              <img style="max-height:90px" src="assets/img/sponsor2.png" alt="">
             </a>
           </div>
         </div>
@@ -127,7 +140,7 @@
       <h1 class="centered mb" style="margin-top:0;">Les conférenciers</h1>
       <div id="speaker3" class="row">
         <div class="centered col-md-4">
-          <img src="/assets/img/speakers/mgagnon.png" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
+          <img src="/assets/img/speakers/mgagnon.jpeg" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
           <h3>Martin Gagnon</h3>
           <h4 style="margin-top:0;"><em>Cofondateur, Associé et Directeur développement logiciel</em> chez <a href="https://www.mirego.com/">Mirego</a></h4>
         </div>
