--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <img style="max-width:400px" src="/assets/img/logo.svg"/>
             <h2>28 octobre 2017</h2>
             <h3>Université de Sherbrooke</h3>
-            <h4>Local D2-1060 de la Faculté des sciences</h4>
+            <h4>Agora du Carrefour de l’Information</h4>
             <div class="mtb">
               <a href="https://www.eventbrite.ca/e/jdisconf-2017-tickets-36739964222" class='btn btn-conf btn-green'>Obtenir un billet</a>
               <!--
@@ -379,11 +379,11 @@ Dans cette présentation, nous allons brièvement parler du potentiel commercial
         <div class="col-md-6">
           <h2 style="margin-top:0;">Comment s'y rendre</h2>
           <p style="margin-top:20px;">Pour vous rendre au Campus principal de l’Université de Sherbrooke, à partir de Montréal: Prendre l’autoroute 10 et ensuite la 410, sortir sur le boul. Université et tourner à droite sur le boulevard jusqu’à l’université.</p>
-          <p>L'auditorium de la Faculté des sciences (local D2-1060) est accessible à partir de l'entrée principale de la Faculté des sciences (D3), puis, une fois à l'intérieur, en prenant le corridor vers la gauche.</p>
+          <p>L’Agora du Carrefour de l’Information (local B1-2002) est situé au 2e étage du bâtiment B1, au centre du Campus (voir le plan).</p>
           <p>Le stationnement est gratuit sur le campus la fin de semaine (sauf si mentionné autrement).</p>
         </div>
         <div class="col-md-6">
-          <script type="text/javascript" src="//maps.google.com/maps/api/js?sensor=false"></script><div style="color:black;overflow:hidden;"><div id="gmap_canvas" style="height:300px;width:100%;"><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" id="get-map-data"></a></div></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:16,center:new google.maps.LatLng(45.381188, -71.926620),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(45.381188, -71.926620)});infowindow = new google.maps.InfoWindow({content:"<b>D2-1060</b><br/>Auditorium de la Faculté des sciences<br/> Universit&eacute; de Sherbrooke" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});}google.maps.event.addDomListener(window, 'load', init_map);</script>
+          <script type="text/javascript" src="//maps.google.com/maps/api/js?sensor=false"></script><div style="color:black;overflow:hidden;"><div id="gmap_canvas" style="height:300px;width:100%;"><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" id="get-map-data"></a></div></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:16,center:new google.maps.LatLng(45.37950795259914,-71.92803624788507),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(45.3794953, -71.9276925)});infowindow = new google.maps.InfoWindow({content:"<b>B1-2002</b><br/>Agora du Carrefour de l&rsquo;Information<br/> Universit&eacute; de Sherbrooke" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});}google.maps.event.addDomListener(window, 'load', init_map);</script>
         </div>
       </div><!--/row-->
     </div><!--/container-->
