add Jorge Oliveira (BDC)

--- a/index.html
+++ b/index.html
@@ -223,20 +223,23 @@ Dans cette présentation, nous allons brièvement parler du potentiel commercial
         </div>
       </div><!--/row-->
       <hr style="padding:10px 0;">
-      <div id="speaker4" class="row">
+      <div id="speaker5" class="row">
         <div class="centered col-md-4">
-          <img src="/assets/img/speakers/placeholder.png" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
-          <h3>À venir</h3>
-          <h4 style="margin-top:0;">À venir</h4>
+          <img src="/assets/img/speakers/joliveira.jpg" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
+          <h3>Jorge Oliveira et Carlos Pereira</h3>
+          <h4 style="margin-top:0;">Développement mobile et support chez <a href="//bdc.ca" target="_blank">BDC</a></h4>
         </div>
         <div class="col-md-8">
-          <h2>Sujet à venir</h2>
+          <h2>Jeter les bases pour la mobilité en entreprise</h2>
           <p>
-            <em>Description à venir.</em>
+            <em>Organizations used to always have more powerful technology than their employees. This scenario has been changing drastically since the popularity of mobility and the power the employees have on their hands. This phenomenon has brought many organizations to create strategies to leverage that technology in the hand of their employees (B2E strategy). BDC has faced several challenges during the creation and execution of that strategy, and will share some of the experiences as well as some practical demonstration of how we organize and maintain the code for the mobile apps we develop.</em>
           </p>
           <hr>
           <p>
-            <em>Biographie à venir.</em>
+            <em>Jorge Oliveira started his journey on mobility in 2005 where he worked for Motorola in development of their OS. He is currently mobile delivery manager, where he has  managed the delivery of 7 iOS mobile apps for BDC employees.</em>
+          </p>
+          <p>
+            <em>Carlos Pereira develops iOS apps since 2008, when the iPhone App Store was released. Before that, he developed mobile games on the Java ME platform. He currently works for BDC, where he takes care of all technical aspects of iOS app development.</em>
           </p>
         </div>
       </div><!--/row-->
@@ -357,8 +360,8 @@ Dans cette présentation, nous allons brièvement parler du potentiel commercial
                 <td>
                   <p>16h10</p>
                 </td>
-                <td><p>À venir</a></td>
-                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#speaker5">À venir</a></p></td>
+                <td><p>Jeter les bases pour la mobilité en entreprise</a></td>
+                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#speaker5">Jorge Oliveira et Carlos Pereira</a></p></td>
               </tr>
               <tr>
                 <td>
