Add agendrix conference

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="centered col-md-4">
           <img src="/assets/img/speakers/mgagnon.jpeg" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
           <h3>Martin Gagnon</h3>
-          <h4 style="margin-top:0;"><em>Cofondateur, Associé et Directeur développement logiciel</em> chez <a href="https://www.mirego.com/">Mirego</a></h4>
+          <h4 style="margin-top:0;"><em>Cofondateur, Associé et Directeur développement logiciel</em> chez <a href="//mirego.com" target="_blank">Mirego</a></h4>
         </div>
         <div class="col-md-8">
           <h2>Si je pouvais reculer dans le temps, voici ce que je m'enseignerais</h2>
@@ -165,7 +165,7 @@
         <div class="centered col-md-4">
           <img src="/assets/img/speakers/obilodeau.jpg" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
           <h3 style="">Olivier Bilodeau</h3>
-          <h4 style="margin-top:0;"><em>Responsable de la recherche sur la cybersécurité</em> chez <a href="http://gosecure.net/">GoSecure</a></h4>
+          <h4 style="margin-top:0;"><em>Responsable de la recherche sur la cybersécurité</em> chez <a href="//gosecure.net" target="_blank">GoSecure</a></h4>
         </div>
         <div class="col-md-8">
           <h2>Les logiciels malveillants sur les objets connectés</h2>
@@ -207,7 +207,7 @@
         <div class="centered col-md-4">
           <img src="/assets/img/speakers/alexandre.jpg" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
           <h3 style="">Alexandre Jean Claude</h3>
-          <h4 style="margin-top:0;"><em>Directeur Technique & Co-Fondateur</em> chez <a href="https://www.metareal.com/">Technologies Metareal inc.</a></h4>
+          <h4 style="margin-top:0;"><em>Directeur Technique & Co-Fondateur</em> chez <a href="//metareal.com" target="_blank">Technologies Metareal inc.</a></h4>
         </div>
         <div class="col-md-8">
           <h2>Défis et opportunités de la Capture de la Réalité pour la Réalité Virtuelle</h2>
@@ -246,18 +246,22 @@ Dans cette présentation, nous allons brièvement parler du potentiel commercial
       <hr style="padding:10px 0;">
       <div id="speaker5" class="row">
         <div class="centered col-md-4">
-          <img src="/assets/img/speakers/placeholder.png" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
-          <h3>À venir</h3>
-          <h4 style="margin-top:0;">À venir</h4>
+          <img src="/assets/img/speakers/charles.jpg" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
+          <h3>Mathieu Allaire et Charles Vallières</h3>
+          <h4 style="margin-top:0;">Cofondateurs & Développeurs chez <a href="//agendrix.com" target="_blank">Agendrix</a></h4>
         </div>
         <div class="col-md-8">
-          <h2>Sujet à venir</h2>
+          <h2>De l’Université à la création d’entreprise</h2>
           <p>
-            <em>Description à venir.</em>
+            <em>En 2014, alors qu’ils tentent d’obtenir un diplôme de l’Université de Sherbrooke en Sciences de l’informatique, Charles et Mathieu s’aventurent à cofonder une entreprise qui se spécialise dans le développement d’applications web et mobiles. De fil en aiguille, ils cofondent Agendrix un logiciel de gestion des horaires et des feuilles de temps.
+            La présentation portera sur les apprentissages liés à la création d’une entreprise et au développement logiciel du point de vue de finissants qui décident de se lancer en affaires.</em>
           </p>
           <hr>
           <p>
-            <em>Biographie à venir.</em>
+            <em>Mathieu s’occupe principalement de la gestion du développement des applications mobiles iOS et Android, du design dans son ensemble ainsi que de la coordination entre le développement et l’équipe marketing.</em>
+          </p>
+          <p>
+            <em>Charles est responsable de la gestion du développement des projets de l’application web, de la performance et de la maintenabilité de celle-ci à long terme ainsi que de la création des intégrations avec les partenaires externes.</em>
           </p>
         </div>
       </div><!--/row-->
@@ -302,8 +306,8 @@ Dans cette présentation, nous allons brièvement parler du potentiel commercial
                 <td>
                   <p>10h05</p>
                 </td>
-                <td><p>À venir</p></td>
-                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#speaker1">À venir</a></p></td>
+                <td><p>De l’Université à la création d’entreprise</p></td>
+                <td><p><a style="border-bottom: 1px solid white; color:white;" href="#speaker1">Mathieu Allaire et Charles Vallières</a></p></td>
               </tr>
               <tr>
                 <td>
