--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ Dans cette présentation, nous allons brièvement parler du potentiel commercial
       <div id="speaker5" class="row">
         <div class="centered col-md-4">
           <img src="/assets/img/speakers/charles.jpg" style="border-radius:100%; width:70%; max-width:300px;margin:0 auto;" class="img-responsive mt" alt="">
-          <h3>Mathieu Allaire et Charles Vallières</h3>
+          <h3>Charles Vallières et Mathieu Allaire</h3>
           <h4 style="margin-top:0;">Cofondateurs & Développeurs chez <a href="//agendrix.com" target="_blank">Agendrix</a></h4>
         </div>
         <div class="col-md-8">
